# ai

./: README.md  demo.py  pyproject.toml  tools.py
demo_mcp/: mcp_demo.py  mcp_tools.py
